--- a/index.html
+++ b/index.html
@@ -25,9 +25,89 @@
             </div>
         </div>
     </div>
-    <div class="banner">
+    <div class="sobre">
         <img src="img/Group 74.svg" alt="GaCo banner">
+        <p> GaCo é uma empresa de gamificação, criada de forma independente visando trazer o dinamismo para as empresas
+            brasileiras, nossa empresa já trabalha com algumas grandes companhias de segmentos de mercado diferentes,
+            mostrando que a gamificação não está limitada e com certeza irá melhorar os processos da sua empresa. Com
+            esse site queremos mostrar para vocês nossos projetos e fazer vocês entenderem os benefícios que a
+            gamificação pode trazer para seus processos.</p>
     </div>
+    <div class="empresas container-grid">
+        <h1>Empresas que atuamos.</h1>
+        <img src="img/Group 75.png" alt="empresas que atuamos">
+    </div>
+    <div class="gamificacao">
+        <h2>Oque é Gamificação?</h2>
+        <p>Gamificação é o processo de aplicar elementos típicos de jogos, como competição, desafios, recompensas e
+            feedbacks, em contextos que não são necessariamente jogos, como educação, ambiente de trabalho, saúde e
+            marketing. O objetivo da gamificação é engajar e motivar as pessoas, incentivando comportamentos desejados e
+            aumentando a participação e o interesse em determinadas atividades. Isso é feito tornando as tarefas mais
+            divertidas, oferecendo recompensas tangíveis ou virtuais, criando sistemas de progressão e estabelecendo
+            metas alcançáveis.</p>
+        <h3>Por que implantar a gamificação?</h3>
+        <p> Implantar a gamificação em qualquer ambiente, seja ele corporativo, educacional ou social, é uma estratégia
+            inteligente e eficaz que traz inúmeros benefícios. A gamificação não apenas transforma tarefas mundanas em
+            atividades envolventes e divertidas, mas também promove um aumento significativo na motivação, engajamento e
+            desempenho dos participantes.
+            Em primeiro lugar, a gamificação é uma ferramenta poderosa para incentivar a aprendizagem e o
+            desenvolvimento. Ao introduzir elementos de jogos, como desafios, recompensas e competições, é possível
+            tornar o processo de aprendizagem mais dinâmico e cativante, estimulando a participação ativa dos alunos ou
+            funcionários.
+            Além disso, a gamificação promove a colaboração e o trabalho em equipe. Ao criar atividades que requerem
+            cooperação e interação entre os participantes, a gamificação fortalece os laços sociais e melhora a
+            comunicação dentro de grupos ou equipes.
+
+        </p>
+    </div>
+    <div class="sucessos">
+        <h4>Conheça nossas cases de maior sucesso:</h4>
+        <div class="imagemempresa">
+            <img src="img/empresas.png" alt="">
+            <p>Empresa</p>
+        </div>
+        <div class="escola">
+            <img src="img/escola.png" alt="">
+            <p>Escola</p>
+        </div>
+        <div class="Hospital">
+            <img src="img/hospital.png" alt="">
+            <p>Hospital</p>
+        </div>
+        <button>Conheça o portifolio completo</button>
+
+    </div>
+
+    <div class="retangulo1">
+
+    </div>
+    <div class="sedivirta">
+        <p> Criamos um portifólio em forma de jogo caso queiram entender melhor como esse serviço que oferecemos
+            funciona. Nesse jogo, seguimos com Alicia, uma adolescente que ao notar a ausência da mãe vai procura-la em
+            seu trabalho, com o seguimento da historia serão apresentadas as nossas cases de maior sucesso, mostrando os
+            problemas que nos foi apresentados e como os resolvemos.</p>
+        <button>Teste agora</button>
+    </div>
+    <div class="retangulo2">
+
+    </div>
+    <div class="contato">
+        <h5>Quer que entremos em contato?</h5>
+        <label for="Nome">Nome</label>
+        <label for="Nome da empresa">Nome da empresa</label>
+        <label for="E-mail">E-mail</label>
+        <label for="Conte-nos">Conte-nos como podemos ajudar!</label>
+        <img src="img/a woman contact 9bab14ab-5857-4db9-b74a-3c0986282572 1.png" alt="">
+    </div>
+    <footer>
+        <img src="img/Group 79.svg" alt="logo footer">
+        <p>GaCo.Dev 2020-2024 Globo Comunicação e Participações S.A. - Todos os direitos reservados</p>
+        <div class="imgfooter">
+            <img src="img/instalogo.svg" alt="">
+            <img src="img/xlogo.svg" alt="">
+            <img src="img/linkedin-svgrepo-com (1).svg" alt="">
+        </div>
+    </footer>
 
 </body>
 
