--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
                 <img src="img/Group 73.svg" alt="Logo GaCo">
             </div>
             <div class="logogaco1300px">
-                <img src="img/gacologo1300px.svg" alt="">
+                <img src="img/gaco1300px.svg" alt="">
             </div>
-            <button><img src="img/Group 90.svg" alt="menuhan"></button>
+            <nav>
+                <a href="#menu1300px">
+
+                    <button><img src="img/menuhan.svg" alt="menuhan"></button>
+                </a>
+
+            </nav>
             <nav class="menu">
                 <a href="#sobre">Sobre</a>
                 <a href="#gamificação">Gamificação</a>
                 <a href="#divirta">Se divirta!</a>
-                <a href="#contato">Contato</a>
+                <a href="#form">Contato</a>
             </nav>
             <div class="fonts">
             </div>
@@ -136,28 +142,35 @@
     <div class="retangulo2">
 
     </div>
-    <form action="">
+
+    
         <div class="forms">
 
             <img src="img/Group 91.svg" alt="">
-
             <div class="nome">
-                <label for="campo-nome">Nome
 
-                </label>
+
+
+                <input type="text" name="Nome" placeholder="Nome">
+
             </div>
+
             <div class="email">
-                <label for="email">E-mail
 
-                </label>
-            </div>
-            <div class="conte">
-                <label for="Contate">Contat-nos
 
-                </label>
+
+                <input type="E-mail" name="E-mail" placeholder="email">
+
             </div>
+            <div class="Contato">
+                
+
+
+                <input type="Contate-nos" name="Contate-nos" placeholder="Contate-nos">
+
+            </div>
+
         </div>
-    </form>
 
 
     <footer>
