--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#sobre">Sobre</a>
                 <a href="#gamificação">Gamificação</a>
                 <a href="#divirta">Se divirta!</a>
-                <a href="#form">Contato</a>
+                <a href="#forms">Contato</a>
             </nav>
             <div class="fonts">
             </div>
@@ -143,34 +143,28 @@
 
     </div>
 
-    
-        <div class="forms">
 
-            <img src="img/Group 91.svg" alt="">
-            <div class="nome">
+    <div class="forms">
 
-
-
-                <input type="text" name="Nome" placeholder="Nome">
-
-            </div>
+        <img src="img/Group 91.svg" alt="">
 
             <div class="email">
-
-
 
                 <input type="E-mail" name="E-mail" placeholder="email">
 
             </div>
             <div class="Contato">
+
+                <input type="Contate-nos" name="Contate-nos" placeholder="Conte-nos como podemos ajudar!">
                 
-
-
-                <input type="Contate-nos" name="Contate-nos" placeholder="Contate-nos">
-
             </div>
+            <button>Enviar</button>
 
-        </div>
+    </div>
+
+    <div class="faixa">
+
+    </div>
 
 
     <footer>
